fix: background color in resume section for dark mode; change: vertical span and position of active region in checkbox slider
Former-commit-id: ae31303c29c2e0dd5543b99e8f1e55c01be6dd4c
Former-commit-id: 3d581a920cc403204d93fbee8c33c8e5b340f00b

--- a/css/custom.css
+++ b/css/custom.css
@@ -254,6 +254,13 @@ emoji {
     margin:auto;
 }
 
+.ui.slider.checkbox input {
+    height: 1.5rem;
+}
+
+.ui.checkbox input[type="checkbox"], .ui.checkbox input[type="radio"] {
+    top: -5px;
+}
 /* For mobile phones */
 
 @media only screen and (max-width: 1580px) {
@@ -316,8 +323,12 @@ emoji {
         width: 90%;
     }
     .nm_slider {
-        padding-bottom: 20px;
+        padding-bottom: 30px;
         padding-top: 10px;
+    }
+
+    .ui.checkbox input[type="checkbox"], .ui.checkbox input[type="radio"] {
+        top: 5px;
     }
 }
 
